force-app/main/default/objects/Opportunity/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <description>CATM</description>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>American Banker</fullName>
            </value>
            <value>
                <fullName>American Banker Association</fullName>
            </value>
            <value>
                <fullName>American Nightclub Association</fullName>
            </value>
            <value>
                <fullName>ATMIA.com</fullName>
            </value>
            <value>
                <fullName>ATMNetwork.com</fullName>
            </value>
            <value>
                <fullName>BAI</fullName>
            </value>
            <value>
                <fullName>Buyer Zone</fullName>
            </value>
            <value>
                <fullName>Cardtronics.com</fullName>
            </value>
            <value>
                <fullName>Credit Union Journal</fullName>
            </value>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>Empire Petroleum</fullName>
            </value>
            <value>
                <fullName>FDIC</fullName>
            </value>
            <value>
                <fullName>Financial Brand</fullName>
            </value>
            <value>
                <fullName>IBG Mailer - FCTI</fullName>
            </value>
            <value>
                <fullName>Illinois Credit Union League</fullName>
            </value>
            <value>
                <fullName>Infogroup - New Business</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>MPI</fullName>
            </value>
            <value>
                <fullName>NCUA</fullName>
            </value>
            <value>
                <fullName>Payments Journal</fullName>
            </value>
            <value>
                <fullName>Skyline</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>DCC Terminal</fullName>
            </value>
            <value>
                <fullName>Russ Schoper</fullName>
            </value>
            <value>
                <fullName>Russ Porter</fullName>
            </value>
            <value>
                <fullName>Buyer Zone - Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>