force-app/main/default/objects/Opportunity/fields/Linked_Partner_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Linked_Partner_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Reseller Opportunity</label>
    <referenceTo>Partner_Opportunity__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>