force-app/main/default/objects/Opportunity/fields/Linked_Special_Bid_Registration__c.field-meta.xml
<CustomField>
    <fullName>Linked_Special_Bid_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Deal Registration</label>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>