force-app/main/default/objects/Opportunity/fields/Lose_to_a_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Lose_to_a_Competitor__c</fullName>
    <label>Lose to a Competitor?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>