force-app/main/default/objects/Opportunity/fields/Managed_Service__c.field-meta.xml
<CustomField>
    <fullName>Managed_Service__c</fullName>
    <description>Total of all Managed Service products attached to the opportunity</description>
    <label>Managed Service</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Revenue_Type__c</field>
        <operation>equals</operation>
        <value>Managed Service</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>