force-app/main/default/objects/Opportunity/fields/Managed_Services_R__c.field-meta.xml
<CustomField>
    <fullName>Managed_Services_R__c</fullName>
    <label>Managed Services-R</label>
    <summarizedField>OpportunityLineItem.Line_Total_TCV_Price__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Revenue_Type__c</field>
        <operation>equals</operation>
        <value>Managed Service</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Is_Subscriptioned__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>