force-app/main/default/objects/Opportunity/fields/Marketing_Program__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Program__c</fullName>
    <label>Sales Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2018 AT&amp;T SI Sales Forum</fullName>
            </value>
            <value>
                <fullName>2018 Global Winback</fullName>
            </value>
            <value>
                <fullName>2018 Telstra Vantage</fullName>
            </value>
            <value>
                <fullName>2019 AT&amp;T Business Summit</fullName>
            </value>
            <value>
                <fullName>2019 AT&amp;T Tech/Sales Forums</fullName>
            </value>
            <value>
                <fullName>2019 – Banking re-imagined ATM program</fullName>
            </value>
            <value>
                <fullName>2019 Charity Events</fullName>
            </value>
            <value>
                <fullName>2019 Cisco Events</fullName>
            </value>
            <value>
                <fullName>2019 – NAMER SelfServ 88 Drive-up Bundle</fullName>
                <label>2019 NAMER – SelfServ 88 Drive-up Offer</label>
            </value>
            <value>
                <fullName>2019 Telstra Vantage</fullName>
            </value>
            <value>
                <fullName>2020 NAMER ITM Prep Kit Program</fullName>
            </value>
            <value>
                <fullName>2020 – Printec NCR Personas Replacement Program</fullName>
            </value>
            <value>
                <fullName>2020 – Q3 Banking Offers</fullName>
            </value>
            <value>
                <fullName>2020 Q3 Buy 10 ATMs Get 1 Free</fullName>
            </value>
            <value>
                <fullName>2020 Q3 Competitor Takeouts Offer</fullName>
            </value>
            <value>
                <fullName>2020 Q3 DB Innovation Credits</fullName>
            </value>
            <value>
                <fullName>2020 Q3 Inventory Offer</fullName>
            </value>
            <value>
                <fullName>2020 Q3 One NCR Digital Renewals</fullName>
            </value>
            <value>
                <fullName>2020 Q3 Partner Inventory Offer</fullName>
            </value>
            <value>
                <fullName>2020 Q3 Partner Preferred Offers</fullName>
            </value>
            <value>
                <fullName>2020 – Q4 Banking Offers</fullName>
            </value>
            <value>
                <fullName>2020 T&amp;T Region Sales Contest</fullName>
            </value>
            <value>
                <fullName>2020 – Vietnam Personas Replacement Program 1H</fullName>
            </value>
            <value>
                <fullName>2021 - DVM Upgrade or Replace ATM Program</fullName>
            </value>
            <value>
                <fullName>2ST Labels</fullName>
            </value>
            <value>
                <fullName>2ST Rolls</fullName>
            </value>
            <value>
                <fullName>3G Replacement</fullName>
            </value>
            <value>
                <fullName>4G Replacement</fullName>
            </value>
            <value>
                <fullName>4G Replacement - US Nat.Accts Only</fullName>
            </value>
            <value>
                <fullName>50-50 program - US Accounts Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>