force-app/main/default/objects/Opportunity/fields/Master_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Master_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the distribution partner involved in the solution.</inlineHelpText>
    <label>Master Distributor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>Account.Partner_Type__c</field>
            <operation>equals</operation>
            <value>Distributor, Managed Services Provider</value>
        </filterItems>
        <filterItems>
            <field>Account.Partnership_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Enterprise</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>