force-app/main/default/objects/Opportunity/fields/Monthly_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Gross_Profit__c</fullName>
    <label>Monthly Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>