force-app/main/default/objects/Opportunity/fields/Monthly_Gross_Profit_Amt_Old_Contract__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Gross_Profit_Amt_Old_Contract__c</fullName>
    <description>CATM</description>
    <label>Monthly Gross Profit Amt (Old Contract)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>