force-app/main/default/objects/Opportunity/fields/Monthly_PCI_Compliance_Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_PCI_Compliance_Program_Fee__c</fullName>
    <label>Monthly PCI Compliance Program Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>