force-app/main/default/objects/Opportunity/fields/Monthly_PIN_Debit_Access_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_PIN_Debit_Access_Fee__c</fullName>
    <label>PIN Debit Monthly Access Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>