force-app/main/default/objects/Opportunity/fields/NCR_Cardtronics_Joint_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NCR_Cardtronics_Joint_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CATM - Opportunity that is being worked on in conjunction with NCR</description>
    <inlineHelpText>Opportunity that is being worked on in conjunction with NCR</inlineHelpText>
    <label>NCR/Cardtronics Joint Opportunity</label>
    <type>Checkbox</type>
</CustomField>