force-app/main/default/objects/Opportunity/fields/Net_ACV__c.field-meta.xml
<CustomField>
    <fullName>Net_ACV__c</fullName>
    <inlineHelpText>Net new annualized revenue.  Net = Gross Revenue less Existing Revenue.</inlineHelpText>
    <label>Net ACV</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>