force-app/main/default/objects/Opportunity/fields/Net_New_Customer__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox states this customer is a Net New Customer as specified within the Deal Registration Program Guide, located in Seismic.</inlineHelpText>
    <label>Net New Customer</label>
    <type>Checkbox</type>
</CustomField>