force-app/main/default/objects/Opportunity/fields/NewSalesProgram__c.field-meta.xml
<CustomField>
    <fullName>NewSalesProgram__c</fullName>
    <description>This is a bad name for this API, this should be changed – this field is for listing the channel sales programs associated with the opportunity</description>
    <label>Channel Sales Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Program 1</fullName>
            </value>
            <value>
                <fullName>Sales Program 2</fullName>
            </value>
            <value>
                <fullName>Sales Program 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>