force-app/main/default/objects/Opportunity/fields/NMS_Annual_GM__c.field-meta.xml
<CustomField>
    <fullName>NMS_Annual_GM__c</fullName>
    <label>NMS Annual GM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>