force-app/main/default/objects/Opportunity/fields/NSSOffered__c.field-meta.xml
<CustomField>
    <fullName>NSSOffered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used for internal component development to make sure the NSS notification is pop-up once for one opportunity</description>
    <label>NSS Offered?</label>
    <type>Checkbox</type>
</CustomField>