force-app/main/default/objects/Opportunity/fields/Num_of_ATMs__c.field-meta.xml
<CustomField>
    <fullName>Num_of_ATMs__c</fullName>
    <description>CATM</description>
    <label># of ATMs/Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>