force-app/main/default/objects/Opportunity/fields/Num_of_ATMs_OLI__c.field-meta.xml
<CustomField>
    <fullName>Num_of_ATMs_OLI__c</fullName>
    <description>CATM</description>
    <label>Number of ATMs (OLI)</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Qty_Type__c</field>
        <operation>equals</operation>
        <value>ATMs/Units</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>