force-app/main/default/objects/Opportunity/fields/OCR_2018_TEAM_H3__c.field-meta.xml
<CustomField>
    <fullName>OCR_2018_TEAM_H3__c</fullName>
    <formula>Sales_Org__r.Hierarchy_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OCR 2018 TEAM H3</label>
    <type>Text</type>
</CustomField>