force-app/main/default/objects/Opportunity/fields/OCR_TEAM__c.field-meta.xml
<CustomField>
    <fullName>OCR_TEAM__c</fullName>
    <label>OCR TEAM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>