force-app/main/default/objects/Opportunity/fields/OCR_Team_Temp__c.field-meta.xml
<CustomField>
    <fullName>OCR_Team_Temp__c</fullName>
    <description>This field is used for OCR File extraction process.</description>
    <externalId>true</externalId>
    <label>OCR Team Temp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>