force-app/main/default/objects/Opportunity/fields/OCV__c.field-meta.xml
<CustomField>
    <fullName>OCV__c</fullName>
    <formula>Reoccurring_Revenue_OLI__c +  IF( NOT(ISBLANK( One_Time_Revenue__c )),One_Time_Revenue__c,0)</formula>
    <label>OCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>