force-app/main/default/objects/Opportunity/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <inlineHelpText>Custom Offer: Deal will involve the Global Deal Desk, or a one-off/custom service or product 
Standard Offer: Deal will consist of list pricing and/or standard discount authority</inlineHelpText>
    <label>Offer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Custom Offer</fullName>
            </value>
            <value>
                <fullName>FS - 2018 Global Winback</fullName>
            </value>
            <value>
                <fullName>FS - Alternative Purchase Model</fullName>
            </value>
            <value>
                <fullName>FS - ATM Advanced Card Protection</fullName>
            </value>
            <value>
                <fullName>FS - ATM Endpoint Security</fullName>
            </value>
            <value>
                <fullName>FS - ATM Jackpotting Protection</fullName>
            </value>
            <value>
                <fullName>FS - ATM Modernization Offer for NAMER CFI</fullName>
            </value>
            <value>
                <fullName>FS - ATM Optimization Consulting</fullName>
            </value>
            <value>
                <fullName>FS - Branch Transformation Consulting</fullName>
            </value>
            <value>
                <fullName>FS - Cash Management @ Branch Service</fullName>
            </value>
            <value>
                <fullName>FS - Cash Management Enabled</fullName>
            </value>
            <value>
                <fullName>FS - Cash Management SaaS</fullName>
            </value>
            <value>
                <fullName>FS - Cash Recycling Consulting</fullName>
            </value>
            <value>
                <fullName>FS - Competitive Attack</fullName>
            </value>
            <value>
                <fullName>FS - Competitive Welcome</fullName>
            </value>
            <value>
                <fullName>FS - Digital Signage</fullName>
            </value>
            <value>
                <fullName>FS - Edge to Activate Migration</fullName>
            </value>
            <value>
                <fullName>FS - Integrated Managed Services for CFI</fullName>
            </value>
            <value>
                <fullName>FS - Interactive Direct Integration</fullName>
            </value>
            <value>
                <fullName>FS - Managed Security Anti-Virus Protection - Standard Offer</fullName>
            </value>
            <value>
                <fullName>FS - NCR Secure Communications Managed Service</fullName>
            </value>
            <value>
                <fullName>FS - Personas Trade-in</fullName>
            </value>
            <value>
                <fullName>FS - PS Engagement Management</fullName>
            </value>
            <value>
                <fullName>FS - Recover the Bank</fullName>
            </value>
            <value>
                <fullName>FS - Self Service Channel Optimization Solution</fullName>
            </value>
            <value>
                <fullName>FS - Staff Augmentation</fullName>
            </value>
            <value>
                <fullName>FS - UI/UX Consumer Experience Design</fullName>
            </value>
            <value>
                <fullName>FS - Win10 &amp; AANDC 5.0 Upgrade</fullName>
            </value>
            <value>
                <fullName>FS - Win10 &amp; AE 3.0 Upgrade</fullName>
            </value>
            <value>
                <fullName>FS - Win10 Enablement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>