force-app/main/default/objects/Opportunity/fields/One_Time_Revenue_OLI__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Revenue_OLI__c</fullName>
    <description>CATM</description>
    <label>One Time Revenue (OLI)</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.One_Time_Revenue__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>