force-app/main/default/objects/Opportunity/fields/Opportunity_Classification__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Classification__c</fullName>
    <description>CATM - This field is used to differentiate Digital Insight Opportunities</description>
    <inlineHelpText>This field is used to differentiate Digital Insight Opportunities</inlineHelpText>
    <label>Opportunity Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Alaric</fullName>
            </value>
            <value>
                <fullName>Digital Insight</fullName>
            </value>
            <value>
                <fullName>CATM - FI</fullName>
            </value>
            <value>
                <fullName>CATM - IBG (Core)</fullName>
            </value>
            <value>
                <fullName>CATM - Retail (Corporate)</fullName>
            </value>
            <value>
                <fullName>CATM - atmAd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>