force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Generates a number for the opportunity</description>
    <displayFormat>{000000000}</displayFormat>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>