force-app/main/default/objects/Opportunity/fields/Opportunity_Site_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Site_Count__c</fullName>
    <inlineHelpText>Enter the number of sites that are pertinent to this opportunity.</inlineHelpText>
    <label>Opportunity Site Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>