force-app/main/default/objects/Opportunity/fields/Org_Code_Diff__c.field-meta.xml
<CustomField>
    <fullName>Org_Code_Diff__c</fullName>
    <formula>AND( Account.MDM_Data_Source_Code__c = &apos;CDM&apos;,
Global_Sales_Org_Exception__c = false,
OR(IsClosed = false , AND(IsClosed = true, CloseDate &gt;= DATE(YEAR(TODAY()) - 3 ,1,1))), 
OR((Account.Global_Sales_Org_Code__c  !=  Sales_Org__r.Sales_Org_Code__c), 
   AND(NOT(ISBLANK(Account.Global_Sales_Org_Code__c)),ISBLANK(Sales_Org__c))
))</formula>
    <label>Org Code Diff</label>
    <type>Checkbox</type>
</CustomField>