force-app/main/default/objects/Opportunity/fields/Overall_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Overall_Contract_Value__c</fullName>
    <inlineHelpText>Enter the expected value of the multi-year contract. Opportunity value must only represent the value expected within 12 months of expected book date.</inlineHelpText>
    <label>Overall Contract Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>