force-app/main/default/objects/Opportunity/fields/Override_Product_Calculations__c.field-meta.xml
<CustomField>
    <fullName>Override_Product_Calculations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CATM</description>
    <label>Override Product Calculations?</label>
    <type>Checkbox</type>
</CustomField>