force-app/main/default/objects/Opportunity/fields/Owner_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_Name__c</fullName>
    <label>Owner Manager Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>