force-app/main/default/objects/Opportunity/fields/OwnerAssignedDate__c.field-meta.xml
<CustomField>
    <fullName>OwnerAssignedDate__c</fullName>
    <label>OwnerAssignedDate</label>
    <type>DateTime</type>
</CustomField>