force-app/main/default/objects/Opportunity/fields/Partner_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>Partner_End_Customer__c</fullName>
    <label>Partner End Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>