force-app/main/default/objects/Opportunity/fields/Partner_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Partner_Engagement__c</fullName>
    <label>Reseller Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NCR Champion</fullName>
            </value>
            <value>
                <fullName>NCR Ambassador</fullName>
                <isActive>false</isActive>
                <label>NCR Ambassador</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>