force-app/main/default/objects/Opportunity/fields/Payback_Period_in_months__c.field-meta.xml
<CustomField>
    <fullName>Payback_Period_in_months__c</fullName>
    <description>CATM</description>
    <label>Payback Period (in months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>