force-app/main/default/objects/Opportunity/fields/Payment_Sales_Offer__c.field-meta.xml
<CustomField>
    <fullName>Payment_Sales_Offer__c</fullName>
    <label>Payment Sales Offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDC Promo</fullName>
            </value>
            <value>
                <fullName>Payments First - Headline</fullName>
            </value>
            <value>
                <fullName>Payments First - Interchange</fullName>
            </value>
            <value>
                <fullName>Legacy Payments</fullName>
            </value>
            <value>
                <fullName>Merchant Cost Savings Program</fullName>
                <isActive>false</isActive>
                <label>Merchant Cost Savings Program</label>
            </value>
            <value>
                <fullName>Payments First</fullName>
                <isActive>false</isActive>
                <label>Payments First</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>