force-app/main/default/objects/Opportunity/fields/Payments_Application_Signee__c.field-meta.xml
<CustomField>
    <fullName>Payments_Application_Signee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payments Application Signee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Payments Application Signee)</relationshipLabel>
    <relationshipName>OpportunityPaymentsApplicationSigne</relationshipName>
    <type>Lookup</type>
</CustomField>