force-app/main/default/objects/Opportunity/fields/Payments_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Payments_Contract_End_Date__c</fullName>
    <inlineHelpText>Please indicate customer existing Payment contact end date</inlineHelpText>
    <label>Payments Contract End Date</label>
    <type>Date</type>
</CustomField>