force-app/main/default/objects/Opportunity/fields/Payments_Features__c.field-meta.xml
<CustomField>
    <fullName>Payments_Features__c</fullName>
    <label>Payments Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Updater</fullName>
            </value>
            <value>
                <fullName>EDC Promo</fullName>
            </value>
            <value>
                <fullName>EDC to EMV</fullName>
            </value>
            <value>
                <fullName>OLO Online Ordering</fullName>
            </value>
            <value>
                <fullName>Convenience</fullName>
            </value>
            <value>
                <fullName>Surcharge</fullName>
            </value>
            <value>
                <fullName>EBT/WIC</fullName>
            </value>
            <value>
                <fullName>EMV</fullName>
            </value>
            <value>
                <fullName>Virtual Terminal</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>