force-app/main/default/objects/Opportunity/fields/POS_Subscription_Discount__c.field-meta.xml
<CustomField>
    <fullName>POS_Subscription_Discount__c</fullName>
    <description>This amount should be captured for allocation purposes associated with Payments First.</description>
    <label>POS Subscription Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>