force-app/main/default/objects/Opportunity/fields/PreBuild_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>PreBuild_Order_Number__c</fullName>
    <label>Pre Build Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>