force-app/main/default/objects/Opportunity/fields/Previous_Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract_Expiration_Date__c</fullName>
    <description>CATM</description>
    <inlineHelpText>Date field which would be completed by Sales Reps when working on renewal opportunities that displays the contract expiration date of the contract that is being renewed</inlineHelpText>
    <label>Previous Contract Expiration Date</label>
    <type>Date</type>
</CustomField>