force-app/main/default/objects/Opportunity/fields/Price_Variance__c.field-meta.xml
<CustomField>
    <fullName>Price_Variance__c</fullName>
    <inlineHelpText>Enter the selection that best represents NCR&apos;s price compared to the competitors involved in this opportunity</inlineHelpText>
    <label>Price Variance</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>NCR above 5%</fullName>
            </value>
            <value>
                <fullName>NCR within 5%</fullName>
            </value>
            <value>
                <fullName>NCR under 5%</fullName>
            </value>
            <value>
                <fullName>Unknown/Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>