force-app/main/default/objects/Opportunity/fields/Pricing_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Analyst</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <errorMessage>Selected user is not authorized Pricing Analyst, Please Select correct user or contact Admin for Discrepancy.</errorMessage>
        <filterItems>
            <field>User.Quicklook_ID__c</field>
            <operation>equals</operation>
            <value>ad250024</value>
        </filterItems>
        <filterItems>
            <field>User.Quicklook_ID__c</field>
            <operation>equals</operation>
            <value>aa185339</value>
        </filterItems>
        <filterItems>
            <field>User.Quicklook_ID__c</field>
            <operation>equals</operation>
            <value>jr185333</value>
        </filterItems>
        <filterItems>
            <field>User.Quicklook_ID__c</field>
            <operation>equals</operation>
            <value>cb185254</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Pricing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PricingAnalyst</relationshipName>
    <type>Lookup</type>
</CustomField>