force-app/main/default/objects/Opportunity/fields/Pricing_Reject_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Reject_Reason_Comments__c</fullName>
    <label>Pricing Reject Reason Comments</label>
    <type>TextArea</type>
</CustomField>