force-app/main/default/objects/Opportunity/fields/Pricing_Review_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Review_Request_Status__c</fullName>
    <label>Pricing Review Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>More Information Requested</fullName>
            </value>
            <value>
                <fullName>More Information Provided</fullName>
            </value>
            <value>
                <fullName>Rate Review Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>